work on some queries

--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
     <!-- trusted by ------------ -->
 
     <div class="trustedby">
-      Trusted by more than
-      <span style="font-weight: bold; font-size: 25px; color: #c80b5a"
-        >2200</span
+      Trusted by 
+      <span
+        >2200+ </span
       >
-      Tax and Finance Professionals
+      Tax Professionals
     </div>
 
     <!-- slider section----------------- -->
