work on some queries

--- a/index.html
+++ b/index.html
@@ -49,23 +49,22 @@
 
     <!-- available on ----------------- -->
 
-    <!-- <div class=" secondSection">
-      
-    </div> -->
-    <div class="availableOn1">
-      <h3>Available on</h3>
-      <img class="appStore" src="/img/App Store - Filled.png" alt="" />
-      <img class="playStore" src="/img/Button.png" alt="" />
-      <!-- <div class=""> -->
-      <!-- </div> -->
-    </div>
-    <div class="availableOn2">
-      <h3>Our users</h3>
-      <img src="/img/Logo-grey.png" alt="" />
-      <img src="/img/Logo-grey (1).png" alt="" />
-      <img src="/img/Logo-grey (2).png" alt="" />
-      <img src="/img/Logo-grey (3).png" alt="" />
-      <img class="taxProfessional" src="/img/tax-consultant.jpg" alt="" />
+    <div class="secondSection">
+      <div class="availableOn1">
+        <h3>Available on</h3>
+        <img class="appStore" src="/img/App Store - Filled.png" alt="" />
+        <img class="playStore" src="/img/Button.png" alt="" />
+        <!-- <div class=""> -->
+        <!-- </div> -->
+      </div>
+      <div class="availableOn2">
+        <h3>Our users</h3>
+        <img src="/img/Logo-grey.png" alt="" />
+        <img src="/img/Logo-grey (1).png" alt="" />
+        <img src="/img/Logo-grey (2).png" alt="" />
+        <img src="/img/Logo-grey (3).png" alt="" />
+        <img class="taxProfessional" style="width: 70px;" src="/img/tax-consultant.jpg" alt="" />
+      </div>
     </div>
 
     <!-- trusted by ------------ -->
