work on some queries

--- a/index.html
+++ b/index.html
@@ -1365,7 +1365,7 @@
           <p>
             Drafted by a team of CA with 18 years experience and 2 assistants.
           </p>
-          <button>Register now</button>
+          <!-- <button>Register now</button> -->
         </div>
       </div>
     </div>
@@ -1390,14 +1390,14 @@
           presence and connect with your clients effortlessly using our
           professionally designed posters.
         </p>
-        <button>Register now <i class="fa-solid fa-arrow-right"></i></button>
+        <!-- <button>Register now <i class="fa-solid fa-arrow-right"></i></button> -->
       </div>
     </div>
 
     <!-- oneclick branding--------------- -->
 
-    <div style="background: #f1f5f9; padding: 50px">
-      <div class="oneclickbranding flexBoxBetween">
+    <div style="background: #f1f5f9; padding: 5px">
+      <div class="oneclickbranding">
         <div>
           <img src="./img/ass.jpg" alt="" />
         </div>
