added login and signup pahe

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <div>About Us</div>
         <div>Pricing</div>
         <div>Blog</div>
-        <div>Log In</div>
-        <div class="startNow">Sign up</div>
+        <a href="signin.html"><div>Log In</div></a>
+        <a href="signup.html"><div class="startNow">Sign up</div></a>
       </div>
       <div class="hamburger" id="hamburger">
         <i class="fas fa-bars"></i>
@@ -32,8 +32,8 @@
         <div>About Us</div>
         <div>Pricing</div>
         <div>Blog</div>
-        <div>Log In</div>
-        <div>Start Now</div>
+        <a href="signin.html"><div>Log In</div></a>
+        <a href="signup.html"><div>Start Now</div></a>
       </div>
     </nav>
 
