--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>One click</title>
     <link rel="stylesheet" href="index.css" />
-    <script
-      src="https://kit.fontawesome.com/e04320a517.js"
-      crossorigin="anonymous"
-    ></script>
+      <script
+        src="https://kit.fontawesome.com/e04320a517.js"
+        crossorigin="anonymous"
+      ></script>
   </head>
   <body>
     <!-- navbar code ------------------ -->
@@ -19,9 +19,9 @@
         <div>OneClick Branding</div>
         <div>About Us</div>
         <div>Pricing</div>
-        <div>Blog</div>
-        <a href="signin.html"><div>Log In</div></a>
-        <a href="signup.html"><div class="startNow">Sign up</div></a>
+        <a href="/Blog/blog.html"> <div>Blog</div></a>
+        <a href="/Signin/signin.html"><div>Log In</div></a>
+        <a href="/Signup/signup.html"><div class="startNow">Sign up</div></a>
       </div>
       <div class="hamburger" id="hamburger">
         <i class="fas fa-bars"></i>
@@ -31,9 +31,9 @@
         <div>OneClick Branding</div>
         <div>About Us</div>
         <div>Pricing</div>
-        <div>Blog</div>
-        <a href="signin.html"><div>Log In</div></a>
-        <a href="signup.html"><div>Start Now</div></a>
+        <a href="/Blog/blog.html"> <div>Blog</div></a>
+        <a href="/Signin/signin.html"><div>Log In</div></a>
+        <a href="/Signup/signup.html"><div>Sign up</div></a>
       </div>
     </nav>
 
@@ -67,7 +67,7 @@
       </div>
     </div>
 
-    <!-- trusted by ------------ -->
+    <!-- trusted by -------------->
 
     <div class="trustedby">
       Trusted by 
@@ -77,7 +77,7 @@
       Tax Professionals
     </div>
 
-    <!-- slider section----------------- -->
+    <!-- slider section------------------->
 
     <section class="mainSliderSection">
       <div class="mainSliderSectionfirst">
@@ -1324,11 +1324,12 @@
     <!-- powered by ----------------------- -->
 
     <div class="poweredBy">
-      <div style="font-size: 40px">Powered By</div>
-      <div class="flexBoxBetween">
+      <div style="font-size: 40px">Powered By</div><br>
+      <div class="poweredByFlex">
         <img class="poweredByAws" src="img/aws.png" alt="" />
         <img class="poweredByMysql" src="img/mysql.png" alt="" />
-      </div>
+      </div><br>
+      
     </div>
     <div class="startFreeButton">
       <button>Start For Free</button>
@@ -1351,6 +1352,18 @@
           <img src="./img/practiceguru (1).png" alt="" />
         </div>
       </div>
+    </div>
+
+    <!-- awarded by ------------------- -->
+
+    <div class="poweredBy">
+      <div style="font-size: 40px">Awarded by TIOL</div><br>
+      <div class=" poweredByFlex">
+        <img class="poweredByAws" src="/img/nikeemem.jpg" alt="" />
+        <img class="poweredByMysql" src="/img/nikeemem.jpg" alt="" />
+        <img class="poweredByMysql" src="/img/nikeemem.jpg" alt="" />
+      </div><br>
+      <div style="font-size: 25px" id="awardPresented">Award presented by FM of Aandra Pradesh</div>
     </div>
 
     <!-- reliable and accurate ------------- -->
@@ -1669,6 +1682,68 @@
       </div>
     </div>
 
+    <div>
+
+      <h1 class="headings">Contactbar Designs</h1>
+  
+      <h3 style=" font-size: 30px;
+        text-align: center;
+        margin: 20px auto; 
+        width: 100%; ">CA Samples</h3>
+      <div class="brandingposters flexBoxBetween">
+        <div class="flexBoxBetween">
+          <img src="/img/App Store - Filled.png" alt="" />
+  
+        </div>
+        <div class="flexBoxBetween">
+          <img src="/img/App Store - Filled.png" alt="" />
+  
+        </div>
+        <div class="flexBoxBetween">
+          <img src="/img/App Store - Filled.png" alt="" />
+  
+        </div>
+      </div>
+  
+      <h3 style=" font-size: 30px;
+        text-align: center;
+        margin: 20px auto; 
+        width: 100%; ">Tax Professional Samples</h3>
+  
+      <div class="brandingposters flexBoxBetween">
+        <div class="flexBoxBetween">
+          <img src="/img/App Store - Filled.png" alt="" />
+  
+        </div>
+        <div class="flexBoxBetween">
+          <img src="/img/App Store - Filled.png" alt="" />
+  
+        </div>
+        <div class="flexBoxBetween">
+          <img src="/img/App Store - Filled.png" alt="" />
+  
+        </div>
+      </div>
+      <h3 style=" font-size: 30px;
+        text-align: center;
+        margin: 20px auto; 
+        width: 100%; ">Lawyers Samples</h3>
+  
+      <div class="brandingposters flexBoxBetween">
+        <div class="flexBoxBetween">
+          <img src="/img/App Store - Filled.png" alt="" />
+  
+        </div>
+        <div class="flexBoxBetween">
+          <img src="/img/App Store - Filled.png" alt="" />
+  
+        </div>
+        <div class="flexBoxBetween">
+          <img src="/img/App Store - Filled.png" alt="" />
+  
+        </div>
+      </div>
+
     <!-- review section ------------ -->
 
     <div class="headings" style="font-weight: bold">Clients Reviews</div>
@@ -1887,7 +1962,7 @@
               />
             </div>
           </div>
-          <div class="flexBoxBetween">
+          <div class="iconflex">
             <i class="fa-brands fa-facebook-f"></i>
             <i class="fa-brands fa-twitter"></i>
             <i class="fa-brands fa-instagram"></i>
