--- a/Signup/signup.html
+++ b/Signup/signup.html
@@ -4,143 +4,137 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign up page</title>
-    <link rel="stylesheet" href="/Signup/signup.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
-    <nav class="navbar">
-      <img src="/img/oneclickLogo.png" alt="OneClick Logo" class="logo" />
-      <div class="nav-links">
-        <a><div>Home</div></a>
-        <div>OneClick Branding</div>
-        <div>About Us</div>
-        <div>Pricing</div>
-        <a href="/Blog/blog.html"> <div>Blog</div></a>
-        <a href="/Signin/signin.html"><div>Log In</div></a>
-        <a href="/Signup/signup.html"><div class="startNow">Sign up</div></a>
-      </div>
-      <div class="hamburger" id="hamburger">
-        <i class="fas fa-bars"></i>
-      </div>
-      <div class="mobile-nav" id="mobile-nav">
-        <div>Home</div>
-        <div>OneClick Branding</div>
-        <div>About Us</div>
-        <div>Pricing</div>
-        <a href="/Blog/blog.html"> <div>Blog</div></a>
-        <a href="/Signin/signin.html"><div>Log In</div></a>
-        <a href="/Signup/signup.html"><div>Sign up</div></a>
-      </div>
-    </nav>
-    <section class="signinMainSection">
-      <div class="firstSectionSignup">
-        <div class="carousel-container-firstSection">
-          <button
-            class="nav-button-firstSection left-firstSection"
-            onclick="prevSlide_firstSection()"
-          >
-            &#10094;
-          </button>
-          <div class="carousel-firstSection">
-            <div class="carousel-track-firstSection">
+    <div id="navbar-placeholder"></div>
+    <section
+      class="d-flex justify-content-between align-items-center h-100 signinMainSection mt-5"
+    >
+      <div
+        class="container firstSectionSignup d-flex flex-column justify-content-center d-none d-lg-flex"
+        style="background-color: #332395; height: 110vh"
+      >
+        <div
+          id="carouselExampleControls"
+          class="carousel slide"
+          data-bs-ride="carousel"
+          style="width: 38%; margin: auto; position: relative"
+        >
+          <div class="carousel-inner">
+            <div class="carousel-item active">
               <img
                 src="/img/Poster1 (1).png"
+                class="d-block w-100"
                 alt="Image 1"
-                class="carousel-image-firstSection"
-              />
-              <img
-                src="/img/Poster1 (2).png"
-                alt="Image 2"
-                class="carousel-image-firstSection"
-              />
-              <img
-                src="/img/Poster1 (3).png"
-                alt="Image 3"
-                class="carousel-image-firstSection"
-              />
-              <img
-                src="/img/Poster1 (4).png"
-                alt="Image 4"
-                class="carousel-image-firstSection"
-              />
-              <img
-                src="/img/Poster1 (5).png"
-                alt="Image 5"
-                class="carousel-image-firstSection"
-              />
-              <img
-                src="/img/Poster1 (1).png"
-                alt="Image 6"
-                class="carousel-image-firstSection"
-              />
-              <img
-                src="/img/Poster1 (4).png"
-                alt="Image 7"
-                class="carousel-image-firstSection"
-              />
-              <img
-                src="/img/Poster1 (3).png"
-                alt="Image 8"
-                class="carousel-image-firstSection"
+                style="height: 350px"
               />
             </div>
+            <div class="carousel-item">
+              <img
+                src="/img/Poster1 (2).png"
+                class="d-block w-100"
+                alt="Image 2"
+                style="height: 350px"
+              />
+            </div>
+            <!-- Other carousel items -->
           </div>
           <button
-            class="nav-button-firstSection right-firstSection"
-            onclick="nextSlide_firstSection()"
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleControls"
+            data-bs-slide="prev"
+            style="
+              position: absolute;
+              top: 50%;
+              left: -50px;
+              transform: translateY(-50%);
+            "
           >
-            &#10095;
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleControls"
+            data-bs-slide="next"
+            style="
+              position: absolute;
+              top: 50%;
+              right: -50px;
+              transform: translateY(-50%);
+            "
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
           </button>
         </div>
       </div>
-      <div class="secondSectionSignup">
-        <form action="" class="inputForm">
-          <h1 class="accountSignUp">Account sign up</h1>
-          <hr style="border: 0.5px solid rgb(245, 244, 244)" />
-          <div class="inputFlex">
+      <!-- onClick={() => window.history.back()} -->
+      <div class="container secondSectionSignup mt-5 mb-4">
+        <div
+        class="mb-4"
+        style="color: rgb(132, 132, 132); cursor: pointer;"
+        onclick="handleGoback()"
+      >
+      <i class="fa-solid fa-angle-left mx-2"></i> Go back
+      </div>
+      <form action="" class="mx-auto w-75">
+        <h1 class="accountSignUp" style="font-weight: bold;">Account sign up</h1>
+          <hr class="text-muted" />
+          <div class="inputFlex d-flex flex-row justify-content-between" style="gap: 40px;">
             <div>
-              <label for=""> First name </label>
-              <input class="largeInput" type="text" />
+              <label for="emailInput" class="form-label"> First name </label>
+               <input id="emailInput" class="form-control" type="text" />
             </div>
 
             <div>
-              <label for=""> Last name </label>
-              <input class="largeInput" type="text" />
+              <label for="emailInput" class="form-label"> Last name </label>
+               <input id="emailInput" class="form-control" type="text" />
             </div>
           </div>
           <br />
           <div>
-            <label for=""> User Email id </label><br />
+            <label for="emailInput" class="form-label"> User Email id </label><br />
             <div class="emailotpInput">
-              <input class="largeInput" type="text" /><button
+               <input id="emailInput" class="form-control" type="text" />
+              <!-- <button
                 class="emailotpInputButton"
               >
                 Generate otp
-              </button>
+              </button> -->
             </div>
           </div>
           <br />
           <div>
-            <label for=""> Mobile No. </label><br />
-            <input class="largeInput" type="text" />
+            <label for="emailInput" class="form-label"> Mobile No. </label><br />
+             <input id="emailInput" class="form-control" type="text" />
           </div>
           <br />
           <div>
-            <label for=""> Set Password </label><br />
-            <input class="largeInput" type="text" />
+            <label for="emailInput" class="form-label"> Set Password </label><br />
+             <input id="emailInput" class="form-control" type="text" />
           </div>
           <br />
-          <div class="passwordError">
+          <div class="passwordError text-danger mb-4 " style="font-size: 14px;">
             *Must contain atleast 1 number, 1 uppercase, 1 lowercase letter, at
             least 8 or more characters
           </div>
           <div>
-            <label for=""> OTP </label><br />
+            <label for="emailInput" class="form-label"> OTP </label><br />
             <div class="emailotpInput">
-              <input class="largeInput" type="text" />
-              <button class="emailotpInputButton">Verify otp</button>
+               <input id="emailInput" class="form-control" type="text" />
+              <!-- <button class="emailotpInputButton">Verify otp</button> -->
             </div>
           </div>
-          <div class="iUnderstand">
+          <div class="iUnderstand my-4" style="font-size: 14px;">
             I understand that by registering on PracticeGuru, I agree to
             the <span style="color: #2563eb"
               ><a href="https://practiceguru.pro/DIY_Posters/terms.php"
@@ -148,11 +142,22 @@
               ></span
             >
           </div>
-
-          <button class="signupButton">Sign up</button>
+          <button type="submit" class="btn btn-warning w-100 fw-bold">
+            Sign up
+          </button>
         </form>
       </div>
     </section>
+    <div id="footer-placeholder"></div>
+    <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"
+  ></script>
+  <script
+        src="https://kit.fontawesome.com/e04320a517.js"
+        crossorigin="anonymous"
+      ></script>
   </body>
 </html>
 <script src="/Signup/signup.js"></script>
