--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <!-- navbar code ------------------ -->
-    <nav class="navbar">
+    <!-- <nav class="navbar">
       <img src="/img/oneclickLogo.png" alt="OneClick Logo" class="logo" />
       <div class="nav-links">
         <div>Home</div>
@@ -35,7 +35,9 @@
         <a href="/Signin/signin.html"><div>Log In</div></a>
         <a href="/Signup/signup.html"><div>Sign up</div></a>
       </div>
-    </nav>
+    </nav> -->
+
+    <div id="navbar-placeholder"></div>
 
     <!-- <div class="mobile-nav">
       <div>Home</div>
@@ -1709,7 +1711,7 @@
         text-align: center;
         margin: 20px auto; 
         width: 100%; ">Tax Professional Samples</h3>
-  
+
       <div class="brandingposters flexBoxBetween">
         <div class="flexBoxBetween">
           <img src="/img/App Store - Filled.png" alt="" />
@@ -1915,70 +1917,11 @@
 
     <!-- footer --------------------------- -->
 
-    <div class="mainFooter">
-      <div class="">
-        <div>
-          <img
-            class="logoPracticeguru"
-            src="/img/practiceguru (1).png"
-            alt=""
-          />
-        </div>
-        <div>
-          <div style="cursor: pointer">Get in touch</div>
-          <div style="cursor: pointer">Mumbai - 400067</div>
-          <div style="cursor: pointer">admin@practiceguru.pro</div>
-          <div style="cursor: pointer">9136667325</div>
-        </div>
-        <div>
-          <div style="cursor: pointer">Account</div>
-          <div style="cursor: pointer">My Account</div>
-          <div style="cursor: pointer">Login / Register</div>
-          <div style="cursor: pointer">Pricing</div>
-        </div>
-        <div>
-          <div style="cursor: pointer">Quick Links</div>
-          <div style="cursor: pointer">Privacy Policy</div>
-          <div style="cursor: pointer">Terms Of Use</div>
-          <div style="cursor: pointer">FAQ</div>
-          <div style="cursor: pointer">Contact</div>
-        </div>
-        <div class="footerRightPart">
-          <div>Download App</div>
-          <div class="">
-            <div>
-              <img class="qrCode" src="./img/Qrcode 1.png" alt="" />
-            </div>
-            <div class="footerRightPartApplyGoogle">
-              <img
-                class="footerRightPartApplyGoogle"
-                src="./img/Button.png"
-                alt=""
-              />
-              <img
-                class="footerRightPartApplyGoogle"
-                src="/img/App Store - Filled.png"
-                alt=""
-              />
-            </div>
-          </div>
-          <div class="iconflex">
-            <i class="fa-brands fa-facebook-f"></i>
-            <i class="fa-brands fa-twitter"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-linkedin-in"></i>
-            <i class="fa-brands fa-youtube"></i>
-          </div>
-        </div>
-      </div>
-      <div class="copyRightLine">
-        <i class="fa-regular fa-copyright"></i> Copyright PracticeGuru @2024.
-        All right reserved
-      </div>
-    </div>
+   <div id="footer-placeholder"></div>
     <button id="back-to-top" class="back-to-top">
       <i class="fa-solid fa-rocket"></i>
     </button>
+    
   </body>
 </html>
 
