working on learning page

--- a/Practiceguru/practiceguru.html
+++ b/Practiceguru/practiceguru.html
@@ -56,7 +56,12 @@
             More than 3400 Clients
           </button>
         </div>
-        <div>
+        <div >
+          <div class="professionalAllImages d-flex justify-content-between align-items-center mx-auto" ><img class="professionalLogo" src="/img/Logo-grey.png" alt="" />
+            <img class="professionalLogo" src="/img/Logo-grey (1).png" alt="" />
+            <img class="professionalLogo" src="/img/Logo-grey (2).png" alt="" />
+            <img class="professionalLogo" src="/img/Logo-grey (3).png" alt="" />
+            <img class="taxProfessional" src="/img/tax-consultant.jpg" alt="" /></div>
           <div
             class="fs-5 d-flex justify-content-center align-items-center mx-auto mt-5 text-light"
             style="width: 100px; background-color: #0ba147; border-radius: 10px"
@@ -1568,6 +1573,8 @@
         </div>
       </div>
     </div>
+
+   
 
     <div id="footer-placeholder"></div>
     <script
